[package]
name = "ch08"
version = "0.1.0"
edition = "2024"


[dependencies]
send_wrapper = "0.6.0"
thread-priority = "0.9.2"
thread-amount = "0.1.3"
crossbeam = "0.8.2"
thread-control = "0.1.2"
rayon = "1.5.3"
go-spawn = "0.1.2"
num_threads = "0.1.6"
parking = "2.0.0"
num_cpus = "1.13.1"
scopeguard = "1.2.0"
terminate-thread = "0.3"
ctx-thread = "0.1.1"
